# Advanced-Programming

Img_Filter_with_Class_Interface/: CMakeLists.txt  README.md  gitignore
Img_Filter_with_Class_Interface/src/fcn/: fcn_ImageLoader_interface.cpp  fcn_filters_interface.cpp
Img_Filter_with_Class_Interface/src/include/: fcn_ImageLoader_interface.hpp  fcn_filters_interface.hpp
Img_Filter_with_Class_Interface/src/main/: main.cpp
Img_filter_without_Class/: CMakeLists.txt  README.md
Img_filter_without_Class/src/fcn/: fcn_filters.cpp
Img_filter_without_Class/src/include/: fcn_filters.hpp
Img_filter_without_Class/src/main/: main.cpp
